--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+
+
+
+
+   
+        <script src="/src/assets/js/popper.min.js"></script>
+        <script src="/src/assets/js/bootstrap.min.js"></script> 
   </body>
 </html>
