--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <link rel="icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jobify App</title>
+    <link rel="stylesheet" href="public/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="public/assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="public/assets/css/flaticon.css">
+    <link rel="stylesheet" href="public/assets/css/slicknav.css">
+    <link rel="stylesheet" href="public/assets/css/price_rangs.css">
+    <link rel="stylesheet" href="public/assets/css/animate.min.css">
+    <link rel="stylesheet" href="public/assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="public/assets/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="public/assets/css/themify-icons.css">
+    <link rel="stylesheet" href="public/assets/css/slick.css">
+    <link rel="stylesheet" href="public/assets/css/nice-select.css">
+    <link rel="stylesheet" href="public/assets/css/style.css">
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="//unpkg.com/alpinejs" defer></script>
   </body>
 </html>
